# note-page-clssifier

./: CMakeLists.txt  run.py
gui/layouts/: home.py  saver.py
notebooks/: rotated_front.xml
settings/: data.json  keypoints.json
src/: main.cpp
src/core/: features.cpp  page.cpp
src/include/: features.hpp  helpers.hpp  page.hpp
src/utils/: helpers.cpp
